first mobile view (removed desktop formatting)

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
 		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 		<link href="./styles/style.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600&display=swap" rel="stylesheet">
 		<title>Frontend Mentor | Four card feature section</title>
 	</head>
 	
@@ -14,31 +14,31 @@
 		<header class="top-header">
 			<h1>Reliable, efficient delivery</h1>
 			<h2>Powered by Technology</h2>
-			<p>Our Artificial Intelligence powered tools use millions of project data</p>
-			<p>points to ensure that your project is successful</p>
+			<p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your 
+			project is successful</p>
 		</header>
 
 		<main>
 				
-			<article class="card" id="super">
+			<article class="card super">
 				<h3>Supervisor</h3>
 				<p>Monitors activity to identify project roadblocks</p>
 				<img class="icon" src="./images/icon-supervisor.svg">
 			</article>
 
-			<article class="card" id="team">
+			<article class="card team">
 				<h3>Team Builder</h3>
 				<p>Scans our talent network to create the optimal team for your project</p>
 				<img class="icon" src="./images/icon-team-builder.svg">
 			</article>
 
-			<article class="card" id="karma">
+			<article class="card karma">
 				<h3>Karma</h3>
 				<p>Regularly evaluates our talent to ensure quality</p>
 				<img class="icon" src="./images/icon-karma.svg">
 			</article>
 
-			<article class="card" id="calc">
+			<article class="card calc">
 				<h3>Calculator</h3>
 				<p>Uses data from past projects to provide better delivery estimates</p>
 				<img class="icon" src="./images/icon-calculator.svg">
