--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 		<header class="top-header">
 			<h1>Reliable, efficient delivery</h1>
 			<h2>Powered by Technology</h2>
-			<p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your 
-			project is successful</p>
+			<div class="header-text">
+				<p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your 
+				project is successful</p>
+			</div>
 		</header>
 
 		<main>
