another desktop version (flex and some relative positioning)

--- a/index.html
+++ b/index.html
@@ -28,17 +28,21 @@
 				<img class="icon" src="./images/icon-supervisor.svg">
 			</article>
 		
-			<article class="card team">
-				<h3>Team Builder</h3>
-				<p>Scans our talent network to create the optimal team for your project</p>
-				<img class="icon" src="./images/icon-team-builder.svg">
-			</article>
+			<div class="mid-cards">
+			
+				<article class="card team">
+					<h3>Team Builder</h3>
+					<p>Scans our talent network to create the optimal team for your project</p>
+					<img class="icon" src="./images/icon-team-builder.svg">
+				</article>
 
-			<article class="card karma">
-				<h3>Karma</h3>
-				<p>Regularly evaluates our talent to ensure quality</p>
-				<img class="icon" src="./images/icon-karma.svg">
-			</article>
+				<article class="card karma">
+					<h3>Karma</h3>
+					<p>Regularly evaluates our talent to ensure quality</p>
+					<img class="icon" src="./images/icon-karma.svg">
+				</article>
+
+			</div>
 
 			<article class="card calc">
 				<h3>Calculator</h3>
